Fixed footer spacing

--- a/src/app/(main)/footer.module.scss
+++ b/src/app/(main)/footer.module.scss
@@ -49,10 +49,10 @@
     width: 100%;
     margin-bottom: 2rem;
     @media screen and (min-width: 576px) { width: 60%; }
-    @media screen and (min-width: 768px) { width: 39%; margin-bottom: 0; }
-    @media screen and (min-width: 992px) { width: 25%; }
-    @media screen and (min-width: 1200px) { width: 25%; }
-    @media screen and (min-width: 1400px) { width: 25%; }
+    @media screen and (min-width: 768px) { width: 37%; margin-bottom: 0; }
+    @media screen and (min-width: 992px) { width: 24%; }
+    @media screen and (min-width: 1200px) { width: 23%; }
+    @media screen and (min-width: 1400px) { width: 23%; }
   }
 
   .column2 {
@@ -60,10 +60,10 @@
     width: 100%;
     margin-bottom: 2rem;
     @media screen and (min-width: 576px) { width: 40%; }
-    @media screen and (min-width: 768px) { width: 25%; margin-bottom: 0; }
-    @media screen and (min-width: 992px) { width: 16%; }
-    @media screen and (min-width: 1200px) { width: 15%; }
-    @media screen and (min-width: 1400px) { width: 15%; }
+    @media screen and (min-width: 768px) { width: 27%; margin-bottom: 0; }
+    @media screen and (min-width: 992px) { width: 17%; }
+    @media screen and (min-width: 1200px) { width: 17%; }
+    @media screen and (min-width: 1400px) { width: 17%; }
   }
 
   .column3 {
